[package]
name = "rust-mongodb-backend"
version = "0.3.0"
authors = ["Gabriel Alfonso"]
edition = "2021"

[dependencies]
tokio = { version = "1.15.0" }
warp = "0.3.2"
serde = {version = "1.0.132", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "2.1.0"
headers = "0.2.3"
bson = {version = "2.1.0", features = ["chrono-0_4"] }
urlencoding = "2.1.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
